# rsi_killer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  estrategias.py  gerenciamento_risco.py  indicadores.py  main.py  pyproject.toml  telegram.py
